# DeepBioP

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEATURE_COMPLETENESS_ANALYSIS.md  README.md  index.html  mkdocs.yml  pyproject.toml  release-plz.toml  requirements.txt
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: doc.yml  labeler.yml  release-python.yml  release-rust.yml  test-python.yml  test-rust.yml  test.yml
api/: index.html
cli/: index.html
cli/cli/: index.html
crates/deepbiop/: CHANGELOG.md  Cargo.toml  README.md
crates/deepbiop-bam/: CHANGELOG.md  Cargo.toml
crates/deepbiop-bam/src/: chimeric.rs  cigar.rs  dataset.rs  io.rs  lib.rs  python.rs
crates/deepbiop-bam/src/chimeric/: count.rs  event.rs
crates/deepbiop-bam/src/features/: mod.rs
crates/deepbiop-bam/src/reader/: mod.rs
crates/deepbiop-bam/tests/data/: test_chimric_reads.bam.chimeric_reads.txt
crates/deepbiop-cli/: CHANGELOG.md  Cargo.toml
crates/deepbiop-cli/src/: cli.rs  main.rs
crates/deepbiop-cli/src/cli/: bam2fq.rs  chimeric_count.rs  countfa.rs  countfq.rs  countfx.rs  encode.rs  export.rs  extractfa.rs  extractfq.rs  extractfx.rs  fa2fq.rs  fa2parquet.rs  fa_augment.rs  fas2one.rs  fq2fa.rs  fq2parquet.rs  fqs2one.rs  fx2parquet.rs  fx_augment.rs  fxs2one.rs
crates/deepbiop-cli/tests/data/: test_extract.txt
crates/deepbiop-core/: CHANGELOG.md  Cargo.toml
crates/deepbiop-core/src/: batch.rs  dataset.rs  default.rs  encoder.rs  error.rs  kmer.rs  lib.rs  python.rs  seq.rs
crates/deepbiop-fa/: CHANGELOG.md  Cargo.toml
crates/deepbiop-fa/src/: augment.rs  dataset.rs  encode.rs  io.rs  lib.rs  python.rs
crates/deepbiop-fq/: CHANGELOG.md  Cargo.toml  test.parquet
crates/deepbiop-fq/src/: dataset.rs  default.rs  encode.rs  error.rs  io.rs  kmer.rs  lib.rs  predicts.rs  python.rs  streaming.rs  types.rs  utils.rs
crates/deepbiop-fq/src/augment/: mod.rs  mutator.rs  python.rs  quality.rs  reverse_complement.rs  sampler.rs
crates/deepbiop-fq/src/encode/: integer.rs  json.rs  onehot.rs  option.rs  parquet.rs  record.rs  tensor.rs  traits.rs  triat.rs
crates/deepbiop-fq/src/filter/: deduplicate.rs  length.rs  mod.rs  python.rs  quality.rs  subsample.rs
crates/deepbiop-fq/src/io/: fq.rs  json.rs
crates/deepbiop-fq/tests/: test_compression.rs  test_dataset.rs
crates/deepbiop-fq/tests/data/: one_record.fq  twenty_five_records.fq
crates/deepbiop-fq/tests/data/chunk0/: 0.pt  1.pt  2.pt
crates/deepbiop-gtf/: Cargo.toml
crates/deepbiop-gtf/src/: lib.rs  python.rs  types.rs
crates/deepbiop-gtf/src/query/: gene.rs  mod.rs  region.rs
crates/deepbiop-gtf/src/reader/: mod.rs
crates/deepbiop-utils/: CHANGELOG.md  Cargo.toml
crates/deepbiop-utils/src/: blat.rs  interval.rs  io.rs  lib.rs  parallel.rs  python.rs  sampling.rs  strategy.rs  sv.rs
crates/deepbiop-utils/src/export/: arrow.rs  mod.rs  numpy.rs  parquet.rs  schema.rs
crates/deepbiop-utils/src/interval/: genomics.rs  segment.rs  traits.rs
crates/deepbiop-utils/src/io/: json.rs  parquet.rs
crates/deepbiop-vcf/: Cargo.toml
crates/deepbiop-vcf/src/: lib.rs  python.rs  types.rs
crates/deepbiop-vcf/src/annotate/: mod.rs
crates/deepbiop-vcf/src/filter/: mod.rs
crates/deepbiop-vcf/src/reader/: mod.rs
crates/deepbiop/src/: lib.rs
deepbiop/: CHANGELOG.md  Cargo.toml  rust-toolchain.toml
deepbiop/src/: lib.rs
development/contributing/: index.html
development/contributing/ci/: index.html
development/contributing/code-style/: index.html
development/contributing/ide/: index.html
development/contributing/test/: index.html
development/versioning/: index.html
docs/: FEATURE_COMPLETENESS_ANALYSIS.md  index.md  ml-framework-compatibility-summary.md  pytorch-hf-compatibility.md  requirements.txt
docs/api/: index.md
docs/cli/: cli.md  index.md
docs/development/: versioning.md
docs/development/contributing/: code-style.md  ide.md  index.md  (+1 more)
docs/imgs/: diagram.tex
docs/user-guide/: getting-started.md  installation.md  python-api.md  rust-api.md
examples/: filter_pipeline.py  pytorch_integration.py  transformers_integration.py
imgs/: diagram.tex
license/: index.html
py-deepbiop/: CHANGELOG.md  Cargo.toml  Makefile  STUB_GENERATION.md  pyproject.toml
py-deepbiop/deepbiop/: __init__.py  __init__.pyi  bam.pyi  collate.py  core.py  core.pyi  dataset.py  datasets.py  fa.pyi  fq.pyi  gtf.pyi  lightning.py  lightning.pyi  pytorch.pyi  targets.py  transforms.py  transforms.pyi  utils.pyi  vcf.pyi
py-deepbiop/deepbiop/modern/: __init__.py  encoders.py  transforms.py  types.py
py-deepbiop/docs/: api-reference.md  conf.py  index.md  performance.md  quickstart.md  requirements.txt  troubleshooting.md
py-deepbiop/examples/: 01_fastq_encoding.ipynb  02_augmentation.ipynb  03_bam_features.ipynb  SUPERVISED_LEARNING.md  augmentation_example.py  conversion_example.py  export_example.py  lightning_module.ipynb  pytorch_quickstart.py  pytorch_training.ipynb  quickstart.ipynb  supervised_learning.py  test_sample.fa
py-deepbiop/src/: lib.rs  python_module.rs
py-deepbiop/src/pytorch/: cache.rs  collate.rs  dataloader.rs  dataset.rs  errors.rs  mod.rs  transforms.rs  types.rs
py-deepbiop/tests/: conftest.py  test_add.py  test_augment.py  test_bam.py  test_cache.py  test_cigar.py  test_core.py  test_dataset.py  test_features.py  test_fq.py  test_fq_encoding.py  test_gtf.py  test_large_scale.py  test_lightning.py  test_ml_framework_compat.py  test_modern.py  test_multilabel_streaming.py  test_performance.py  test_pytorch.py  test_pytorch_api.py  test_pytorch_performance.py  test_reproducibility.py  test_supervised_learning.py  test_transformers.py  test_transforms.py  test_utils.py  test_vcf.py
py-deepbiop/tests/data/: labeled_small.fastq  labels.csv  test.bam  test.fa  test.fastq  test.fastq.parquet
search/: search_index.json
specs/002-pytorch-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
user-guide/getting-started/: index.html
user-guide/installation/: index.html
(+20 files in other folders)
