[workspace]
resolver = "2"
members = ["crates/*", "py-deepbiop"]
default-members = ["crates/*"]

[workspace.package]
version = "0.1.14"
edition = "2021"
authors = ["Yangyang Li <sunlifeliz5@gmail.com>"]
homepage = "https://github.com/cauliyang/DeepBioP"
repository = "https://github.com/cauliyang/DeepBioP"
license = "Apache-2.0"

[workspace.dependencies]
pyo3 = { version = "0.23.3", features = [
    "abi3-py39",
    "extension-module",
    "anyhow",
] }
pyo3-stub-gen = "0.6.2"
thiserror = "2.0"
anyhow = "1.0"
walkdir = { version = "2.5" }
rayon = { version = "1.10" }
log = "0.4"
pyo3-log = "0.12.1"
noodles = { version = "0.87.0", features = [
    "bgzf",
    "core",
    "csi",
    "fasta",
    "fastq",
    "sam",
    "bam",
] }

bio = "2.0"
needletail = "0.6"

ahash = "0.8.11"
numpy = "0.23"
ndarray = { version = "0.16", features = ["serde", "rayon"] }
num-traits = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_distr = "0.4"
bitvec = "1.0"
itertools = "0.14.0"
derive_builder = "0.20"
lexical = "7.0"
bstr = "1.11.3"
lazy_static = "1.5.0"
tempfile = "3.15"
parquet = "54.0"
arrow = "54.0"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.1" }
colored = "3.0"
textwrap = "0.16"
flate2 = { version = "1.0.35", features = [
    "zlib-ng",
], default-features = false }

deepbiop-fq = { version = "0.1.14", path = "crates/deepbiop-fq" }
deepbiop-bam = { version = "0.1.11", path = "crates/deepbiop-bam" }
deepbiop-utils = { version = "0.1.14", path = "crates/deepbiop-utils" }
deepbiop-fa = { version = "0.1.14", path = "crates/deepbiop-fa" }
deepbiop-core = { version = "0.1.14", path = "crates/deepbiop-core" }

[profile.opt-dev]
inherits = "dev"
opt-level = 1

[profile.debug-release]
inherits = "release"
debug = true
incremental = true
codegen-units = 16
lto = "thin"

[profile.release]
codegen-units = 1
lto = "fat"
