[workspace]
resolver = "2"
members = ["crates/*", "py-deepbiop"]
default-members = ["crates/*"]

[workspace.package]
version = "0.1.16"
edition = "2021"
authors = ["Yangyang Li <sunlifeliz5@gmail.com>"]
homepage = "https://github.com/cauliyang/DeepBioP"
repository = "https://github.com/cauliyang/DeepBioP"
license = "Apache-2.0"
readme = "README.md"

[workspace.dependencies]
ahash = "0.8.12"
anyhow = "1.0"
arrow = "57.0"
bio = "3.0"
bitvec = "1.0"
bstr = "1.12.1"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.1" }
colored = "3.0"
deepbiop-bam = { version = "0.1.16", path = "crates/deepbiop-bam" }
deepbiop-core = { version = "0.1.14", path = "crates/deepbiop-core" }
deepbiop-fa = { version = "0.1.15", path = "crates/deepbiop-fa" }
deepbiop-fq = { version = "0.1.16", path = "crates/deepbiop-fq" }
deepbiop-utils = { version = "0.1.16", path = "crates/deepbiop-utils" }
derive_builder = "0.20"
flate2 = { version = "1.1.5", features = ["zlib-rs"], default-features = false }
itertools = "0.14.0"
lazy_static = "1.5.0"
lexical = "7.0"
log = "0.4"
ndarray = { version = "0.16", features = ["serde", "rayon"] }
needletail = "0.5"
noodles = { version = "0.101.0", features = [
    "bgzf",
    "core",
    "csi",
    "fasta",
    "fastq",
    "sam",
    "bam",
] }
num-traits = { version = "0.2" }
numpy = "0.27"
parquet = "57.0"
pyo3 = { version = "0.27.1", features = [
    "abi3-py310",
    "extension-module",
    "anyhow",
] }
pyo3-log = "0.13.2"
pyo3-stub-gen = "0.17.0"
rand = "0.9"
rand_distr = "0.5"
rayon = { version = "1.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"
textwrap = "0.16"
thiserror = "2.0"
walkdir = { version = "2.5" }

[profile.opt-dev]
inherits = "dev"
opt-level = 1

[profile.debug-release]
inherits = "release"
debug = true
incremental = true
codegen-units = 16
lto = "thin"

[profile.release]
codegen-units = 1
lto = "fat"
