[package]
name = "deepbiop"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
keywords = [
    "deep learning",
    "bioinformatics",
    "fastq",
    "bam",
    "arrow",
    "parquet",
]
license = { workspace = true }
readme = "../README.md"
description = "Deep Learning Processing Library for Biological Data"

[dependencies]
deepbiop-fq = { path = "../crates/deepbiop-fq", version = "0.1", optional = true }
deepbiop-bam = { path = "../crates/deepbiop-bam", version = "0.1", optional = true }
deepbiop-utils = { path = "../crates/deepbiop-utils", version = "0.1", optional = true }

[features]
default = []
fastq = ["dep:deepbiop-fq"]
bam = ["dep:deepbiop-bam"]
utils = ["dep:deepbiop-utils"]


[package.metadata.docs.rs]
all-features = true
