[package]
name = "py-deepbiop"
version = { workspace = true }
edition = "2021"

[lib]
name = "deepbiop"
crate-type = ["cdylib"]

[dependencies]
deepbiop-fq = { workspace = true, features = ['python'] }
pyo3 = { workspace = true }
log = { workspace = true }
ahash = { workspace = true }
rayon = { workspace = true }
pyo3-log = { workspace = true }
anyhow = { workspace = true }
needletail = { workspace = true }
numpy = { workspace = true }
parquet = { workspace = true }
