[package]
name = "py-deepbiop"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "deepbiop"
crate-type = ["cdylib", "rlib"]

[dependencies]
deepbiop-fq = { workspace = true, features = ['python'] }
deepbiop-bam = { workspace = true, features = ['python'] }
deepbiop-utils = { workspace = true, features = ['python'] }

pyo3-stub-gen = { workspace = true }
pyo3 = { workspace = true }
log = { workspace = true }
ahash = { workspace = true }
rayon = { workspace = true }
pyo3-log = { workspace = true }
anyhow = { workspace = true }
needletail = { workspace = true }
numpy = { workspace = true }
parquet = { workspace = true }

[build-dependencies]
pyo3-build-config = "0.22"
