[package]
name = "deepbiop-bam"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
keywords = ["bam", "deep-learning", "bioinformatics"]
license = { workspace = true }
readme = "../../README.md"
description = "Deep Learning Processing Library for Bam Format"

[dependencies]
anyhow = { workspace = true }
noodles = { workspace = true }
pyo3 = { workspace = true, optional = true }
pyo3-stub-gen = { workspace = true, optional = true }
numpy = { workspace = true, optional = true }
flate2 = { workspace = true }
bstr = { workspace = true }
rayon = { workspace = true }
ahash = { workspace = true }
log = { workspace = true }
lexical = { workspace = true }

derive_builder = { workspace = true }
deepbiop-core = { workspace = true }
deepbiop-utils = { workspace = true }
deepbiop-fq = { workspace = true }

[dev-dependencies]
bio = { workspace = true }
tempfile = { workspace = true }


[features]
python = ["dep:pyo3", "dep:pyo3-stub-gen", "dep:numpy"]
