[package]
name = "deepbiop-utils"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
keywords = ["deep-learning", "utils"]
license = { workspace = true }
readme = "../../README.md"
description = "Deep Learning Preprocessing Library for Biological Data"

[dependencies]
pyo3 = { workspace = true }
pyo3-stub-gen = { workspace = true }
colored = { workspace = true }
textwrap = { workspace = true }
ahash = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
bstr = { workspace = true }

needletail = { workspace = true }
derive_builder = { workspace = true }
lexical = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }

[features]
python = []
