[package]
name = "deepbiop"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
keywords = ["deep-learning", "bioinformatics", "biological-data"]
license = { workspace = true }
readme = "../../README.md"
description = "Deep Learning Processing Library for Biological Data"

[dependencies]
deepbiop-fq = { workspace = true, optional = true }
deepbiop-bam = { workspace = true, optional = true }
deepbiop-utils = { workspace = true, optional = true }
deepbiop-fa = { workspace = true, optional = true }
deepbiop-core = { workspace = true, optional = true }
deepbiop-vcf = { workspace = true, optional = true }
deepbiop-gtf = { workspace = true, optional = true }

[features]
default = ["dep:deepbiop-core"]
fastq = ["dep:deepbiop-fq"]
bam = ["dep:deepbiop-bam"]
utils = ["dep:deepbiop-utils"]
fasta = ["dep:deepbiop-fa"]
vcf = ["dep:deepbiop-vcf"]
gtf = ["dep:deepbiop-gtf"]

[package.metadata.docs.rs]
all-features = true
